# zsmtp

./: .gitignore  .justfile  AGENTS.md  CLI_ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  ci.yml  coverage.yml  release.yml  test.yml
docs/: protocol.md  prototype.md  thesis.md
examples/: zsmtp.yaml
src/: config.rs  crypto.rs  error.rs  lib.rs  message.rs  protocol.rs  server.rs
src/cli/: start.rs  telemetry.rs
src/cli/actions/: config.rs  doctor.rs  mod.rs  serve.rs  submit.rs
src/cli/commands/: mod.rs
src/cli/dispatch/: mod.rs
