[package]
name = "zsmtp"
version = "0.1.0"
authors = ["Team ZSMTP <team@zsmtp.dev>"]
description = "A zero-knowledge SMTP mail transfer agent prototype"
documentation = "https://docs.rs/zsmtp"
repository = "https://github.com/zsmtp/zsmtp"
readme = "README.md"
keywords = ["smtp", "mta", "cli", "zero-knowledge", "mail"]
categories = ["command-line-utilities", "network-programming"]
license = "BSD-3-Clause"
edition = "2024"

[lints.rust]
warnings = "deny"

[lints.clippy]
nursery = { level = "allow", priority = -1 }
pedantic = "deny"
all = "deny"
correctness = "deny"
suspicious = "deny"
perf = "deny"
complexity = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
await_holding_lock = "deny"
needless_borrow = "deny"
needless_collect = "deny"
large_stack_arrays = "deny"

[dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/zsmtp", dest = "/usr/bin/zsmtp", mode = "0755" }
]

[package.metadata.deb]
assets = [
  ["target/release/zsmtp", "/usr/bin/zsmtp", "755"]
]
depends = ""


[build-dependencies]
built = { version = "0.8.0", features = ["git2"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
